# MachineRX

./: .gitignore  README.md  package.json
examples/apps/: app0.cpp  app1.cpp  app2.cpp  app_mutli_mthread_mutex_printf.cpp  main_app.cpp  main_app.hpp
examples/host/: CMakeLists.txt  Makefile
examples/host/src/: main.cpp
examples/nucleo_f446ze/: .mxproject  CMakeLists.txt  Makefile
examples/nucleo_f446ze/Inc/: FreeRTOSConfig.h  freertos_pthread_c_additions.h  freertos_pthread_h_additions.h  freertos_tasks_c_additions.h  freertos_tasks_h_additions.h  main.h
examples/nucleo_f446ze/Src/: main.c  stm32f4xx_it.c
examples/nucleo_f446ze/lib/FreeRTOS-Plus-POSIX/source/: FreeRTOS_POSIX_pthread.c
examples/topics/: topic1.hpp  topic2.hpp
examples_rfx/apps/: app_multi_pub_single_sub_example.cpp  app_pub_multi_sub_example.cpp  app_pub_sub_chain_example._cpp  app_pubsub_1.cpp  app_pubsub_2.cpp  app_pubsub_example.cpp  app_starter.cpp  app_starter.hpp
examples_rfx/nucleo_f446ze/: .mxproject  CMakeLists.txt  Makefile
examples_rfx/nucleo_f446ze/Inc/: FreeRTOSConfig.h  main.h
examples_rfx/nucleo_f446ze/Src/: main.c  stm32f4xx_hal_msp.c
examples_rfx/topics/: topic1.hpp  topic2.hpp  topic3.hpp  topic4.hpp  topic5.hpp
examples_rpx/apps/: app0.cpp  app1.cpp  app2.cpp  app_mutli_mthread_mutex_printf.cpp  app_test_FreeRTOS_POSIX_mutex.c  app_test_FreeRTOS_mutex.c  main_app.cpp  main_app.hpp
examples_rpx/host/: CMakeLists.txt  Makefile
examples_rpx/host/src/: main.c
examples_rpx/nucleo_f446ze/: .mxproject  CMakeLists.txt  Makefile  nucleo_f446ze.ioc
examples_rpx/nucleo_f446ze/Inc/: FreeRTOSConfig.h  freertos_pthread_c_additions.h  freertos_tasks_c_additions.h  stm32f4xx_it.h
examples_rpx/nucleo_f446ze/Src/: main.c
examples_rpx/nucleo_f446ze/lib/FreeRTOS-Plus-POSIX/include/portable/: FreeRTOS_POSIX_portable_default.h
examples_rpx/nucleo_f446ze/lib/include/FreeRTOS_POSIX/: pthread.h
examples_rpx/topics/: topic1.hpp  topic2.hpp
machinerfx/include/: MRXThread.hpp  MRXTopic.hpp  MRXUtil.hpp  MachineRFX.hpp  mrfx_allocators.h
machinerpx/include/: MAction.hpp  MParameter.hpp  MService.hpp  MThread.hpp  MTopic.hpp  MUtil.hpp  MachineRPX.hpp  mrpx_allocators.h
machinerx/include/: MAction.hpp  MParameter.hpp  MQueue.hpp  MService.hpp  MThread.hpp  MTopic.hpp  MUtil.hpp  MachineRX.hpp  mxr_allocators.h
machinerx/src/: MachineRX.cpp
